--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
-    "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
+    "lint": "eslint \"{app,apps,libs,test}/**/*.ts\" --fix",
+    "format": "prettier --write \"app/**/*.ts\" \"app/**/*.tsx\" \"test/**/*.ts\"",
     "tsc:check": "npx tsc --project ./tsconfig.json --noEmit",
     "tsc:watch": "npm run tsc:check -- --watch"
   },
