--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "tsc:watch": "npm run tsc:check -- --watch"
   },
   "dependencies": {
+    "@react-navigation/bottom-tabs": "^6.4.0",
+    "@react-navigation/native": "^6.0.13",
+    "@react-navigation/stack": "^6.3.2",
     "expo": "~46.0.13",
     "expo-status-bar": "~1.4.0",
     "react": "18.0.0",
